# TinyBoBERT-PBit-Training-Bridge

./: LICENSE  README.md  pyproject.toml
.serena/: project.yml
docs/: IMPROVEMENT_ROADMAP.md  POLISH_IMPROVEMENTS.md  SCIENTIFIC_ASSESSMENT.md
mltsu/diagnostics/: __init__.py  convergence.py
mltsu/energy/: __init__.py  realistic_accounting.py
mltsu/physics/: __init__.py  device_imperfections.py  realistic_noise.py  thermalization.py
mltsu/sampling/: __init__.py  importance_sampling.py
mltsu/streamlit/: biobert_demo.py  ising_app.py  unified_app.py
tests/: test_convergence.py  test_physics_validation.py
