[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mltsu"
version = "0.1.0"
description = "Machine Learning Thermodynamic Sampling Units - PyTorch to TSU Bridge"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "MLTSU Team", email = "mltsu@example.com"}
]
keywords = ["thermodynamic computing", "probabilistic computing", "p-bits", "ising machines", "pytorch", "jax"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "black>=23.0.0",
    "mypy>=1.3.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.22.0",
]
viz = [
    "streamlit>=1.25.0",
    "plotly>=5.14.0",
    "matplotlib>=3.6.0",
]
all = [
    "mltsu[dev,viz]",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/mltsu"
"Bug Tracker" = "https://github.com/yourusername/mltsu/issues"
"Documentation" = "https://mltsu.readthedocs.io"

[tool.setuptools]
packages = ["mltsu"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]